<resources>
    <string name="app_name">血糖</string>
    <string name="recode">记录</string>
    <string name="report">报告</string>
    <string name="monitor">监测</string>
    <string name="data">数据</string>
    <string name="my">我的</string>
    <string name="reference_the_blood_sugar">参比血糖</string>
    <string name="finger_the_blood_sugar">指尖血糖</string>
    <string name="blood_sugar_data">血糖值</string>
    <string name="diet_records">饮食记录</string>
    <string name="add_food">添加食物</string>
    <string name="fill_in_grams">填写份量</string>
    <string name="medical_records">用药记录</string>
    <string name="sport_recodes">运动记录</string>
    <string name="blood_press_recodes">血压记录</string>
    <string name="continuous_monitoring_of_blood_glucose_record_review">持续监测血糖记录回顾</string>
    <string name="equipment_alarm_record_review">设备报警记录回顾</string>
    <string name="connected_device">已连接设备（MJ000011）</string>
    <string name="data_is_synchronized_to_the_cloud">数据同步至云端</string>
    <string name="save_data_as">数据另存为</string>
    <string name="upload_the_pc">上传pc端</string>
    <string name="data_is_shared_with_the_specified_user">数据分享给指定用户</string>
    <string name="company_introduce">公司介绍</string>
    <string name="device_show">设备展示</string>
    <string name="help_center">帮助中心</string>
    <string name="online_customer_service">在线客服</string>
    <string name="exit_login">退出登录</string>
    <string name="system_setting">系统设置</string>
    <string name="exit_program">退出程序</string>
    <string name="more_than_one_day_not_receiver_data">超过一天未收到任何数据,请先停止病例,然后新建病例</string>
    <string name="are_your_sure_exit_login">您确认要退出登录吗</string>
    <string name="are_your_sure_exit_program">您确认要退出程序吗</string>
    <string name="unbound_device_jump">未连接设备</string>
    <string name="oneself">本人</string>
    <string name="in_a_single_map">单日图谱</string>
    <string name="event_graph">事件图谱</string>
    <string name="overlapping_maps">重叠图谱</string>
    <string name="complete_map">完整图谱</string>
    <string name="patients_with_equipment">患者设备</string>
    <string name="the_timeline">时间轴</string>
    <string name="target_range">目标血糖范围</string>
    <string name="monitor_blood_sugar">检测血糖值</string>
    <string name="effective_monitoring_points_for_the_day">当天有效监测点数</string>
    <string name="effective_monitoring_points_for_the_all">所有有效监测点数</string>
    <string name="daily_monitoring_mean">当天监测平均值</string>
    <string name="all_monitoring_mean">所有监测平均值</string>
    <string name="day_range">当天监测范围</string>
    <string name="all_range">所有监测范围</string>
    <string name="blood_glucose_fluctuation_coefficient">血糖波动系数</string>
    <string name="effective_detection_time">有效检测时长</string>
    <string name="the_number_of">个数</string>
    <string name="average">平均值</string>
    <string name="range">范围</string>
    <string name="average_press">平均压</string>
    <string name="range_mmol">范围(mmol/l)</string>
    <string name="average_mmol">平均值(mmol/l)</string>
    <string name="the_offset">偏移</string>
    <string name="normal_blood_glucose_time">正常血糖时间</string>
    <string name="hypoglycemic_time">低血糖时间</string>
    <string name="hyperglycemic_time">高血糖时间</string>
    <string name="time_than">时间比</string>
    <string name="setting_success">设置成功</string>
    <string name="high">高</string>
    <string name="middle">中</string>
    <string name="low">低</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="other">其它</string>
    <string name="mean_value_before_meal">餐前平均值</string>
    <string name="the_dinner_range">餐前范围</string>
    <string name="postprandial_mean">餐后平均值</string>
    <string name="scope_of_after_a_meal">餐后范围</string>
    <string name="time_interval">自定义时间段</string>
    <string name="current_blood_data">当前血糖值</string>
    <string name="fluctuation_coefficient">波动系数</string>
    <string name="patient_information">患者信息</string>
    <string name="name">姓名</string>
    <string name="head_photo">头像</string>
    <string name="please_input">请输入</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="phone">电话</string>
    <string name="id_number">身份证号</string>
    <string name="address">地区</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="sick_time">发病时间</string>
    <string name="type_of_diabetes">糖尿病类型</string>
    <string name="device_information">设备信息</string>
    <string name="transmitter_coding">发射器编码</string>
    <string name="record_glycosylated_hemoglobin">糖化血红蛋白记录</string>
    <string name="inspection_record">检查记录</string>
    <string name="anamnesis">既往病史</string>
    <string name="change">切换</string>
    <string name="software_version_number">软件版本号</string>
    <string name="device_operation_log">设备运行日志</string>
    <string name="medication_type">用药类型</string>
    <string name="bluetooth">蓝牙</string>
    <string name="bluetooth_status">蓝牙当前状态</string>
    <string name="please_keep_the_attached_device_next_to_the_phone_and_turned_on">请保持绑定的设备在手机旁边并且已开启</string>
    <string name="cases_list">病例列表</string>
    <string name="cases">病例</string>
    <string name="find_bind_device">搜索设备中</string>
    <string name="pdf_not_operate">正在生成pdf报告,请勿操作</string>
    <string name="select_commit_cases">病例选择</string>
    <string name="add_cases">新增病例</string>
    <string name="start_time">开始时间</string>
    <string name="stop_time">停止时间</string>
    <string name="select_category">类型选择</string>
    <string name="start_search">开始搜索</string>
    <string name="stop_search">停止搜索</string>
    <string name="search">搜索</string>
    <string name="connect_device">已连接设备</string>
    <string name="device">设备</string>
    <string name="bind_device">已绑定设备</string>
    <string name="remake">备注</string>
    <string name="bind">已绑定</string>
    <string name="binding_please_wait">正在绑定中,请稍后</string>
    <string name="pausing_please_wait">正在暂停中,请稍后</string>
    <string name="starting_please_wait">正在启动中,请稍后</string>
    <string name="stop_please_wait">正在停止中,请稍后</string>
    <string name="continuing_please_wait">正在继续中,请稍后</string>
    <string name="_bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="unbinding_please_wait">解绑</string>
    <string name="bind_success">绑定成功</string>
    <string name="unbind_success">解绑成功</string>
    <string name="unbind_notify">解绑提示</string>
    <string name="device_connect_qz_unbind">设备不在线,强制解绑?</string>
    <string name="please_stop_device">请先停止设备!</string>
    <string name="no_bind_device">当前没有绑定的设备</string>
    <string name="bind_notify">绑定提示</string>
    <string name="are_your_sure_unbind">您确认要解绑吗？</string>
    <string name="init_time">血糖仪初始化倒计时</string>
    <string name="is_bind">是否解绑</string>
    <string name="start_stop_monitor">启动监测/终止监测</string>
    <string name="pause_continue_monitor">暂停监测/继续监测</string>
    <string name="device_start_fail">设备启动失败</string>
    <string name="device_continue_fail">设备继续失败</string>
    <string name="device_pause_fail">设备暂停失败</string>
    <string name="device_stop_fail">设备停止失败</string>
    <string name="device_unbind_fail">设备解绑失败</string>
    <string name="device_unbind_fail_device_is_unbind">解绑失败,设备已处于解绑状态</string>
    <string name="qz_pause">强制暂停?</string>
    <string name="qz_stop">强制停止?</string>
    <string name="qz_unbind">强制解绑?</string>
    <string name="device_stop_status">设备已停止</string>
    <string name="device_pause_status">设备已暂停</string>
    <string name="add">新增</string>
    <string name="back">返回</string>
    <string name="monitor_blood_glucose_level_dynamically">动态监测血糖仪</string>
    <string name="save">保存</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="add_reference_blood">+添加参比血糖</string>
    <string name="continue_monitor_blood_sugar_recode">持续监测血糖记录回顾</string>
    <string name="abnormal_data_please_reenter_the_blood_glucose_value">数据异常,请重新输入血糖值</string>
    <string name="device_communication_is_abnormal_please_connect_the_device">设备连接异常,请连接设备</string>
    <string name="the_blood_glucose_level_will_not_be_reintroduced_for_half_an_hour">请注意,半个小时内不会提示重新输入血糖值</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="prediabetes">糖尿病前期</string>
    <string name="gestation">妊娠期</string>
    <string name="one_type">1型</string>
    <string name="two_type">2型</string>
    <string name="other_type">其他类型</string>
    <string name="oral_medicine">口服药</string>
    <string name="insulin">胰岛素</string>
    <string name="save_error">头像保存出错</string>
    <string name="use_current_cases">使用当前病例</string>
    <string name="current_cases">(当前病例)</string>
    <string name="monitor_cases">(监测病例)</string>
    <string name="no_case_ha_been_established_yet">暂未建立病例</string>
    <string name="target_range_setting">目标血糖范围设置</string>
    <string name="reminder_setting">提醒方式设定</string>
    <string name="automatic_blood_glucose_alarm_line_setting">血糖自动报警线设置</string>
    <string name="emergency_contact_settings">紧急联系人设置</string>
    <string name="alarm_time_set">血糖预测时间设置</string>
    <string name="time_period_setting">时间段设置</string>
    <string name="high_blood_sugar_alarm_line">高血糖报警线</string>
    <string name="low_blood_sugar_alarm_line">低血糖报警线</string>
    <string name="target_hyperglycemia">目标高血糖</string>
    <string name="target_hypoglycemia">目标低血糖</string>
    <string name="target_blood_sugar_value_not_set">目标血糖值未设置</string>
    <string name="set_fail_case_not_use">设置失败病例不可用</string>
    <string name="please_reselect_time">结束时间早于开始时间,请重新选择时间</string>
    <string name="no_select_start_time">未选择开始时间,请重新选择时间</string>
    <string name="no_select_time">未选择时间,请重新选择时间</string>
    <string name="half_day_time">12小时</string>
    <string name="four_hour">4小时</string>
    <string name="day_time">24小时</string>
    <string name="all_time">全部</string>
    <string name="add_sport_recode">添加运动记录</string>
    <string name="add_blood_press_record">添加血压记录</string>
    <string name="add_finger_the_blood_sugar">添加指尖血糖</string>
    <string name="systolic_pressure">收缩压 (高压)</string>
    <string name="diastolic_pressure">舒张压 (低压)</string>
    <string name="average_pressure">平均压</string>
    <string name="measure_time">测量时间</string>
    <string name="click_to_fill_in_the_notes">点击填写备注说明</string>
    <string name="range_mmhg">范围70-260mmHg</string>
    <string name="blood_pressure_not_set">血压未设置</string>
    <string name="add_blood_press_recodes">添加血压记录</string>
    <string name="add_diet_records">添加饮食记录</string>
    <string name="add_new_diet">添加新饮食</string>
    <string name="calories">大卡</string>
    <string name="calories_backslash">大卡/</string>
    <string name="grams_sugar_backslash">克糖/</string>
    <string name="grams_edible_backslash">克(可食用)</string>
    <string name="type_of_medical">用药方式</string>
    <string name="medical_name">药品名称</string>
    <string name="select">选择</string>
    <string name="drug_content">药品含量</string>
    <string name="please_fill_in">请填写</string>
    <string name="use_drug_time">用药时间</string>
    <string name="use_drug">用药</string>
    <string name="use_drug_style">用药方式</string>
    <string name="drug_name">药品名称</string>
    <string name="downloading">加载中</string>
    <string name="extra_time">额外时间</string>
    <string name="extra_imformation">附加信息</string>
    <string name="about_use_drug_imformation">您可以填写用药相关信息</string>
    <string name="sport_type">运动类型</string>
    <string name="sport_during">运动时长</string>
    <string name="sport">运动</string>
    <string name="sport_time">运动时间</string>
    <string name="please_select">请选择</string>
    <string name="please_fill_in_time">请输入时间</string>
    <string name="minute">分钟</string>
    <string name="hand_added_diet">手工添加饮食</string>
    <string name="diet_name">饮食名称</string>
    <string name="please_fill_in_diet_name">请输入饮食名称</string>
    <string name="please_fill_in_calories">请输入大卡</string>
</resources>